[package]
name = "connections-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "connections"
path = "src/main.rs"

[dependencies]
connections-core = { path = "../connections-core" }
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
