[package]
name = "connections-web"
version = "0.1.0"
edition = "2024"

[dependencies]
connections-core = { path = "../connections-core" }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4"] }
maud = { version = "*", features = ["axum"] }
chrono = "0.4"
tower-http = { version = "0.6", features = ["compression-gzip"] }
